fix: tweak label alignment

--- a/homepage-pull-animation/css/style.scss
+++ b/homepage-pull-animation/css/style.scss
@@ -388,6 +388,8 @@ body{
 .a-merg__item__tag{
 	display: inline-block;
 	padding: 0 8px;
+	padding-bottom: 1px;
+	vertical-align: text-bottom;
 	margin-left: 4px;
 	border-radius: 16px;
 	font-size: .85em;
